htick 0.01
----------

Sat Apr 24  
By Alex Erzin, checked in by Gabriel
 + files.bbs files supported
 + seenbys added

Sun Apr 11  17:00:00
Antonio:
 + htick supports filearea descriptions.

Mo 22.03.1999
Gabriel Plutzar:
  + Support for Magic Tag

Su 21.03.1999
Gabriel Plutzar:
  + Areafix now writes mails to the right sender name
  + As the to Field in tic file is not necessarily needed as FSC says,
    it is now checked only if it exists, as some Prozessors don't generate
    it

Th 18.03.1999
  Gabriel Plutzar:
  Commented out lines with tossgrp in it, in order to let htick compilable
  with the new fidoconfig version


---	
First Release, there will be many bugs in it